--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@
 header {
   margin: 5rem 7.5rem 4.31rem 7.5rem;
 }
+
 /* nav */
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -65,6 +67,8 @@ ul > li {
   font-size: 3.25rem;
   font-weight: 700;
   margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 .banner-p {
   color: #3a3a3a;
@@ -94,6 +98,32 @@ ul > li {
   background-size: 94%;
   background-repeat: no-repeat;
   width: 125%;
+}
+
+/* Main Company Section */
+.main-company-section {
+  display: flex;
+  flex-direction: column;
+  margin: 0 10rem 6.25rem;
+}
+.image-optimize {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 3.5rem;
+}
+.image-optimize img {
+  display: flex;
+}
+.hr-style {
+  background-image: linear-gradient(
+    135deg,
+    rgba(192, 204, 218, 0.1) 0%,
+    rgba(192, 204, 218, 0.6) 50.38%,
+    rgba(192, 204, 218, 0.1) 100%
+  );
+  height: 1.5px;
+  border: none;
 }
 
 /* For Mobile Screen */
@@ -127,7 +157,10 @@ ul > li {
 
   /* Banner Section */
   .banner-section {
-    flex-direction: column;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
     margin: 0;
   }
   .banner-h1 {
@@ -149,20 +182,22 @@ ul > li {
   .banner-left {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
   }
   .banner-right img {
     background-image: url('./images/Circle\ design.svg');
     background-size: 94%;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 70%;
   }
   .banner-right {
+    display: flex;
+    justify-content: center;
     width: 100vw;
     display: flex;
-    padding-left: 1rem;
-    border: 1px solid black;
+    margin-top: 2rem;
   }
   .banner-btn {
     display: flex;
@@ -174,4 +209,46 @@ ul > li {
   .banner-btn > img {
     display: none;
   }
+  /* Main company Section */
+
+  .main-company-section {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 1rem;
+  }
+
+  .image-optimize {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0.5rem;
+    justify-content: space-evenly;
+    padding: 1rem 3.5rem;
+  }
+  .i-7 {
+    display: none;
+  }
+  .image-optimize img {
+    display: flex;
+    width: 70%;
+  }
+
+  /* .image-optimize {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 3.5rem;
+  }
+  .image-optimize img {
+    display: flex;
+  }
+  .hr-style {
+    background-image: linear-gradient(
+      135deg,
+      rgba(192, 204, 218, 0.1) 0%,
+      rgba(192, 204, 218, 0.6) 50.38%,
+      rgba(192, 204, 218, 0.1) 100%
+    );
+    height: 1.5px;
+    border: none;
+  } */
 }
